--- a/Final2508.Rmd
+++ b/Final2508.Rmd
@@ -912,6 +912,11 @@ Linking omics profiles with clinical outcomes could also be explored to improve 
 
 # Reference List
 
+Theunissen, T. W., & Jaenisch, R. (2017). Molecular control of pluripotency and cellular reprogramming. *Nature Reviews Molecular Cell Biology*, 18(12), 743–757. [https://doi.org/10.1038/nrm.2017.15](https://doi.org/10.1038/nrm.2017.15)
+
+Masui, S., et al. (2007). Pluripotency governed by Sox2 via regulation of Oct3/4 expression in mouse embryonic stem cells. *Nature Cell Biology*, 9(6), 625–635. [https://doi.org/10.1038/nature06015](https://doi.org/10.1038/nature06015)
+
+Yang, Y., et al. (2019). Dissecting the global dynamic molecular profiles of human fetal kidney development by single-cell RNA sequencing. *Cell Reports*, 28(8), 3254-3264.e5. [https://doi.org/10.1016/j.cell.2019.02.035](https://doi.org/10.1016/j.cell.2019.02.035)
 
 
 
